Bug 328350 - A lot of error message from akonadi when checkin my imap account
Summary: A lot of error message from akonadi when checkin my imap account
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: IMAP resource (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Christian Mollekopf
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-03 05:21 UTC by humufr
Modified: 2014-02-19 15:29 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Full imap log (5.58 KB, text/x-log)
2013-12-20 01:57 UTC, Michal Sylwester
Details
Proposed patch (554 bytes, patch)
2014-02-07 09:40 UTC, Michal Sylwester
Details

Note You need to log in before you can comment on or make changes to this bug.
Description humufr 2013-12-03 05:21:46 UTC
I am using the version 4.11.97 from kubuntu. When akonadi is checking the email, the imap resource report a problem every time. It seems that the connector is working but fill the system tray with error message like: Search failed. The  server answered : A000111 BAD FETCH Additional arguments found after last expected argument [ CLIENTBUG ]

This happens for gmail and yahoo account.

Reproducible: Always

Steps to Reproduce:
1. having an imap email.
2. having akonadi with an imap connector
3. check the server
Actual Results:  
Find new email but with a lot of errors

Expected Results:  
do not show all the errors.
Comment 1 Christian Mollekopf 2013-12-11 09:16:36 UTC
We will need an imap traffic log and the server used to debug this:
http://techbase.kde.org/Projects/PIM/Akonadi/Debug_IMAP
Comment 2 Michal Sylwester 2013-12-20 01:56:15 UTC
I'm having same problem, but out of several of IMAP servers I only see it with yahoo.com (server imap.mail.yahoo.com)

I believe this is the relevant log part:
C: A000015 SELECT "INBOX"
S: * 2 EXISTS
S: * 0 RECENT
S: * OK UIDs valid [ UIDVALIDITY 1369207707  ]
S: * OK Predicted next UID [ UIDNEXT 3  ]
S: * FLAGS ( \Answered \Deleted \Draft \Flagged \Seen $Forwarded $Junk $NotJunk )
S: * OK Permanent flags [ PERMANENTFLAGS ( \Answered \Deleted \Draft \Flagged \Seen $Forwarded $Junk $NotJunk )  ]
S: * OK [ HIGHESTMODSEQ 5943332287725699072  ]
S: A000015 OK SELECT completed; now in selected state [ READ-WRITE  ]
C: A000016 FETCH 1:2 (FLAGS UID) (CHANGEDSINCE 5943332287725699072)
S: A000016 BAD FETCH Additional arguments found after last expected argument [ CLIENTBUG  ]
Comment 3 Michal Sylwester 2013-12-20 01:57:29 UTC
Created attachment 84183 [details]
Full imap log
Comment 4 Christian Mollekopf 2013-12-20 09:14:25 UTC
Thanks for the debuginfo.
It looks like we're unconditionally sending CHANGEDSINCE even if the server doesn't support CONDSTORE.
Comment 5 Michal Sylwester 2014-02-07 09:40:48 UTC
Created attachment 85031 [details]
Proposed patch

This seems to fix this for me: the CHANGEDSINCE should only be added when HIGHESTMODSEQ is set and the server reports support for CONDSTORE.
Comment 6 Christian Mollekopf 2014-02-19 15:29:40 UTC
Git commit 8522659fe6acc8aaecf63bddfae3629ddb1f370c by Christian Mollekopf.
Committed on 19/02/2014 at 15:27.
Pushed by cmollekopf into branch 'master'.

Only set changedsince if CONDSTORE is available.

Thanks to Michal Sylwester for the patch.

M  +3    -1    resources/imap/retrieveitemstask.cpp

http://commits.kde.org/kdepim-runtime/8522659fe6acc8aaecf63bddfae3629ddb1f370c