Only set changedsince if CONDSTORE is available.

Thanks to Michal Sylwester for the patch.

BUG: 328350